# ccode

./: CLAUDE.md  Cargo.toml  README.md  README.zh.md  chinese_tone_master.md  config.example.toml
.ralph-tui/: config.toml  session-meta.json  session.json
.scratchpad/agent-sessions/sess-1775114591763/: response.txt
.scratchpad/agent-sessions/sess-1775114657524/: response.txt
crates/application/: Cargo.toml
crates/application/src/: agent_triggers_acceptance_tests.rs  assistant_mode_service.rs  bridge_mode_acceptance_tests.rs  coordinator_mode_acceptance_tests.rs  cross_feature_integration_tests.rs  error.rs  kairos_acceptance_tests.rs  lib.rs  mode_coordinator_service.rs  multi_agent_orchestration_acceptance_tests.rs  multi_agent_orchestrator_service.rs  multi_agent_orchestrator_tests.rs  remote_session_service.rs  remote_session_service_tests.rs  spec_contracts.rs  teammem_acceptance_tests.rs  teammem_kairos_service.rs  ultraplan_acceptance_tests.rs  ultraplan_service.rs
crates/application/src/commands/: agent_run.rs  mod.rs  sessions_clear.rs  sessions_delete.rs
crates/application/src/queries/: health.rs  mod.rs  sessions_list.rs  sessions_show.rs
crates/bootstrap/: Cargo.toml
crates/bootstrap/src/: image_input.rs  lib.rs  persona_template.rs
crates/bootstrap/tests/: acceptance_parity_gate.rs  spec_governance_gate.rs  workspace_architecture.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/cmd/: agent.rs  bridge.rs  chicago.rs  cron.rs  health.rs  mod.rs  output.rs  repl.rs  sessions.rs  tui.rs
crates/config/: Cargo.toml
crates/config/src/: error.rs  lib.rs  loader.rs  paths.rs  schema.rs
crates/cron/: Cargo.toml
crates/cron/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: agent.rs  assistant_mode.rs  cron.rs  error.rs  event.rs  lib.rs  llm.rs  message.rs  session.rs
crates/domain/tests/: llm_types.rs
crates/gateway/: Cargo.toml
crates/gateway/src/: agent_bridge.rs  main.rs  server.rs
crates/gateway/src/adapters/: discord.rs  mod.rs  telegram.rs  telegram_image.rs  telegram_polling.rs
crates/image-process/: Cargo.toml
crates/image-process/src/: lib.rs
crates/mcp-runtime/: Cargo.toml
crates/mcp-runtime/src/: chicago_mcp_acceptance_tests.rs  client.rs  client_tests.rs  contracts.rs  cross_feature_integration_tests.rs  lib.rs  transport.rs  transport_tests.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs  remote_trigger_dispatch_service.rs  remote_trigger_dispatch_service_tests.rs  security.rs  security_tests.rs  trigger_scheduler_service.rs  trigger_scheduler_service_tests.rs
crates/ports/: Cargo.toml
crates/ports/src/: cron.rs  embedding.rs  event_bus.rs  lib.rs  memory.rs  provider.rs  repositories.rs  tool.rs
crates/ports/tests/: llm_client_contract.rs
crates/provider/: Cargo.toml
crates/provider/src/: contracts.rs  factory.rs  lib.rs  router.rs
crates/provider/src/anthropic/: adapter.rs  mod.rs
crates/provider/src/anthropic_compat/: client.rs  mod.rs  types.rs
crates/provider/src/compat/: convert.rs  mod.rs  request.rs  response.rs
crates/provider/src/gemini/: adapter.rs  mod.rs
crates/provider/src/llamacpp/: adapter.rs  mod.rs
crates/provider/src/openai/: adapter.rs  mod.rs
crates/provider/src/openai_compat/: client.rs  mod.rs  types.rs
crates/provider/src/openrouter/: adapter.rs  mod.rs
crates/provider/src/zhipu/: adapter.rs  mod.rs
crates/provider/tests/: agent_loop.rs  compat_conversion.rs  contract.rs  integration.rs
crates/remote-runtime/: Cargo.toml
crates/remote-runtime/src/: ccr_client.rs  ccr_client_tests.rs  contracts.rs  contracts_tests.rs  lib.rs
crates/session/: Cargo.toml
crates/session/src/: in_memory.rs  jsonl.rs  lib.rs
crates/state-store/: Cargo.toml
crates/state-store/src/: lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: agent.rs  cron_create.rs  get_agent_result.rs  lib.rs  mcp.rs  registry.rs  skill.rs  spawn_agent.rs  task_stop.rs  worker_monitor.rs
crates/tools/src/fs/: edit.rs  glob.rs  grep.rs  list.rs  mod.rs  read.rs  write.rs
crates/tools/src/shell/: mod.rs
crates/tools/src/web/: browser.rs  fetch.rs  mod.rs
docs/: README.md  acceptance-playbook.md  acceptance-spec.md  agent-triggers-contract.md  bridge-mode-contract.md  chicago-mcp-contract.md  codename-mapping.md  coordinator-mode-contract.md  implementation-phases.md  integration-contracts.md  kairos-contract.md  llm-compat-contract.md  multi-agent-orchestration-contract.md  operator-runbook.md  parity-matrix.md  release-signoff-checklist.md  spec-iterations.md  spec-lock-v1.md  teammem-contract.md  ultraplan-contract.md
docs/plans/: 2026-04-02-us-004-session-management-cli.md  2026-04-02-us-018-remote-runtime-remote-session-service.md  2026-04-02-us-019-ccrclient-http-transport-layer.md  2026-04-02-us-023-multi-agent-orchestrator.md  2026-04-03-cli-observability-and-color-plan.md  2026-04-06-gateway-webhook-daemon.md  2026-04-06-us-005-discord-interactions-handler.md
docs/verification/: us-007-validation.md
scripts/: check-acceptance-gates.sh  check-workspace-architecture.sh
tasks/: prd-gateway-webhook-daemon.json  prd-untitled-feature.md  prd-vision-support.json  prd.json
