[workspace]
members = [
    "crates/domain",
    "crates/ports",
    "crates/config",
    "crates/application",
    "crates/provider",
    "crates/session",
    "crates/tools",
    "crates/cron",
    "crates/bootstrap",
    "crates/cli",
]
resolver = "2"

[workspace.dependencies]
# internal crates
ccode-domain      = { path = "crates/domain" }
ccode-ports       = { path = "crates/ports" }
ccode-application = { path = "crates/application" }
ccode-config      = { path = "crates/config" }
ccode-provider    = { path = "crates/provider" }

# common external deps
serde              = { version = "1", features = ["derive"] }
thiserror          = "2"
async-trait        = "0.1"
tokio              = { version = "1", features = ["rt", "macros"] }
serde_json         = "1"
axum               = "0.7"
tower              = { version = "0.4", features = ["util"] }
http-body-util     = "0.1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap               = { version = "4", features = ["derive"] }
anyhow             = "1"
toml               = "0.8"
reqwest            = { version = "0.12", features = ["json", "stream"] }
futures            = "0.3"
futures-core       = "0.3"
async-stream       = "0.3"
tokio-stream       = "0.1"
chrono             = { version = "0.4", features = ["serde"] }
cron               = "0.12"
