[package]
name = "ccode-application"
version = "0.1.0"
edition = "2024"

[dependencies]
ccode-domain = { workspace = true }
ccode-ports  = { workspace = true }
async-trait  = { workspace = true }
thiserror     = { workspace = true }
futures-core  = { workspace = true }
futures       = { workspace = true }
serde_json    = { workspace = true }
tracing       = { workspace = true }

[dev-dependencies]
tokio       = { workspace = true }
