[package]
name = "ccode-bootstrap"
version = "0.1.0"
edition = "2024"

[dependencies]
ccode-domain       = { workspace = true }
ccode-ports        = { workspace = true }
ccode-config       = { workspace = true }
ccode-provider     = { workspace = true }
ccode-application  = { workspace = true }
ccode-mcp-runtime  = { path = "../mcp-runtime" }
ccode-session      = { path = "../session" }
ccode-tools        = { path = "../tools" }
ccode-cron         = { path = "../cron" }
ccode-image-process = { path = "../image-process" }
chrono              = { workspace = true }
thiserror           = { workspace = true }
tracing             = { workspace = true }
tokio               = { workspace = true, features = ["rt"] }
arboard             = { version = "3", features = ["wayland-data-control"] }
tempfile            = "3"
image               = "0.25"
base64              = "0.22"

[dev-dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
