[package]
name = "ccode-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "ccode"
path = "src/main.rs"

[dependencies]
ccode-application = { workspace = true }
ccode-bootstrap   = { path = "../bootstrap" }
chrono             = { workspace = true }
clap               = { workspace = true }
anyhow             = { workspace = true }
futures            = { workspace = true }
serde_json         = { workspace = true }
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "io-std"] }
rustyline          = "14"
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
