[package]
name = "ccode-cron"
version = "0.1.0"
edition = "2024"

[dependencies]
ccode-domain = { workspace = true }
ccode-ports  = { workspace = true }
async-trait   = { workspace = true }
serde_json    = { workspace = true }
tokio         = { version = "1", features = ["fs"] }
tracing       = { workspace = true }
chrono        = { workspace = true }
cron          = { workspace = true }
