[package]
name = "ccode-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
ccode-bootstrap = { path = "../bootstrap" }
ccode-application = { path = "../application" }
ccode-config = { path = "../config" }
ccode-domain = { path = "../domain" }
ccode-image-process = { path = "../image-process" }
axum = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
clap = { workspace = true }
base64 = "0.22"
ed25519-dalek = "2"
hex = "0.4"

[dev-dependencies]
tower = { workspace = true }
