[package]
name = "ccode-platform"
version = "0.1.0"
edition = "2024"

[dependencies]
ccode-application = { workspace = true }
ccode-remote-runtime = { workspace = true }
ccode-cron = { path = "../cron" }
ccode-state-store = { path = "../state-store" }
async-trait = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
