[package]
name = "ccode-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
ccode-domain  = { workspace = true }
ccode-ports   = { workspace = true }
ccode-config  = { workspace = true }
async-trait    = { workspace = true }
futures        = { workspace = true }
futures-core   = { workspace = true }
async-stream   = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
reqwest        = { workspace = true }
thiserror      = { workspace = true }
tracing        = { workspace = true }
tokio          = { version = "1", features = ["rt"] }

[dev-dependencies]
wiremock = "0.6"
tokio    = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[features]
default = ["provider-openrouter", "provider-zhipu", "provider-openai", "provider-llamacpp", "provider-anthropic"]
provider-openrouter  = []
provider-zhipu       = []
provider-openai      = []
provider-anthropic   = []
provider-llamacpp    = []
