[package]
name = "ccode-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
ccode-domain       = { workspace = true }
ccode-ports        = { workspace = true }
ccode-application  = { workspace = true }
ccode-platform     = { workspace = true }
ccode-mcp-runtime  = { path = "../mcp-runtime" }
chrono        = { workspace = true }
cron          = { workspace = true }
async-trait   = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true, features = ["fs", "process", "io-util", "time"] }
thiserror     = { workspace = true }
tracing       = { workspace = true }
anyhow        = { workspace = true }
reqwest       = { workspace = true }
ignore        = "0.4"
regex         = "1"
glob          = "0.3"
